--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,18 +3,35 @@
     <style name="Theme.ECBuy" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/colorPrimary</item>
-        <!--        <item name="colorPrimaryVariant">@color/error_color</item>-->
+                <item name="colorPrimaryVariant">@color/colorSnackBarSuccess</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/colorPrimary</item>
-        <!--        <item name="colorSecondaryVariant">@color/error_color</item>-->
-        <!--        <item name="colorOnSecondary">@color/error_color</item>-->
+                <item name="colorSecondaryVariant">@color/colorSnackBarSuccess</item>
+                <item name="colorOnSecondary">@color/colorSnackBarSuccess</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">@color/colorPrimaryDark</item>
+        <item name="android:statusBarColor" >@color/colorPrimaryDark</item>
         <!-- Customize your theme here. -->
         <item name="colorAccent">@color/colorPrimary</item>
 <!--        <item name="android:editTextColor">@color/white</item>-->
 <!--        <item name="android:textColorHint">@color/white</item>-->
+    </style>
+
+    <style name="Theme.ECBuy.NoActionBar" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryVariant">@color/colorSnackBarSuccess</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/colorPrimary</item>
+        <item name="colorSecondaryVariant">@color/colorSnackBarSuccess</item>
+        <item name="colorOnSecondary">@color/colorSnackBarSuccess</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor" >@color/colorPrimaryDark</item>
+        <!-- Customize your theme here. -->
+        <item name="colorAccent">@color/colorPrimary</item>
+        <!--        <item name="android:editTextColor">@color/white</item>-->
+        <!--        <item name="android:textColorHint">@color/white</item>-->
     </style>
 
     <style name="Splash.Style" parent="Theme.AppCompat.NoActionBar">
