--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,7 @@
     <color name="colorBorder">#E8E6E6</color>
     <color name="colorDarkGray">#878787</color>
     <color name="colorImageViewBackground">#E1E1E1</color>
+    <color name="colorOffWhite">#F8F8F8</color>
+    <color name="itemValueTextColor">#545353</color>
+    <color name="dashboardItemDetailsBackground">#F3F3F3</color>
 </resources>
