--- a/app/src/main/res/layout/item_list_layout.xml
+++ b/app/src/main/res/layout/item_list_layout.xml
@@ -5,8 +5,13 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="@dimen/_13sdp"
     android:background="@color/white"
+    android:clickable="true"
+    android:clipToPadding="true"
+    android:focusable="true"
+    android:foreground="?android:attr/selectableItemBackground"
     android:orientation="vertical"
-    android:padding="@dimen/_8sdp">
+    android:padding="@dimen/_8sdp"
+    app:cardBackgroundColor="@android:color/transparent">
 
     <LinearLayout
         android:id="@+id/ll_item_image"
@@ -65,7 +70,7 @@
         android:background="@android:color/transparent"
         android:contentDescription="@string/image_content_description"
         android:foreground="?attr/selectableItemBackgroundBorderless"
-        android:padding="@dimen/_5sdp"
+        android:padding="@dimen/_3sdp"
         android:src="@drawable/ic_delete"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/ll_product_details"
