--- a/app/src/main/res/layout/activity_address_list.xml
+++ b/app/src/main/res/layout/activity_address_list.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorOffWhite"
     tools:context=".ui.activities.AddressListActivity">
 
     <FrameLayout
@@ -47,8 +48,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/_13sdp"
-        android:fontFamily="@font/montserrat_regular"
         android:background="@drawable/item_primary_color_border_background"
+        android:fontFamily="@font/montserrat_regular"
         android:foreground="?attr/selectableItemBackground"
         android:gravity="center"
         android:padding="@dimen/_13sdp"
