--- a/app/src/main/res/layout/fragment_sold_products.xml
+++ b/app/src/main/res/layout/fragment_sold_products.xml
@@ -5,28 +5,28 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorOffWhite"
-    tools:context=".ui.fragments.OrdersFragment">
+    tools:context=".ui.fragments.SoldProductsFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_my_order_items"
+        android:id="@+id/rv_sold_products_items_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tv_no_orders_found"
+        android:id="@+id/tv_no_products_sold_yet"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/_5sdp"
         android:layout_marginEnd="@dimen/_5sdp"
         android:fontFamily="@font/montserrat_regular"
-        android:text="@string/no_orders_placed_yet"
+        android:text="@string/no_products_sold_out_yet"
         android:textAlignment="center"
         android:textColor="@color/colorSecondaryText"
-        android:textSize="@dimen/_15ssp"
+        android:textSize="@dimen/_20ssp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
